--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@
 >>>>>>>=refs/remotes/origin/master
 eclipse.preferences.version=1
 encoding//src/AccessFunc.java=gbk
+encoding//src/ScanClassOfAll.java=gbk
 encoding//src/julia/AccessQN.java=UTF-8
 encoding//src/julia/Test.java=UTF-8
